# Pylings

./: .gitignore  pyproject.toml
pylings/: constants.py  exercises.py
pylings/backups/01_variables/: variables1.py  variables2.py
pylings/exercises/01_variables/: variables1.py  variables2.py
pylings/tests/: __init__.py  conftest.py
pylings/tests/00_intro/: test_intro1.py
pylings/tests/01_variables/: test_variables1.py  test_variables2.py
scripts/: validate_tests.py
