[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pylings"
version = "1.2.2"
description = "Python exercise trainer, inspired by rustlings."
authors = [{ name="Seb Blair", email="s.blair@gre.ac.uk" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
dependencies = [
    "textual==2.1.2",
    "psutil==7.0.0",
    "watchdog==6.0.0",
    "rich==13.9.4",
    "toml==0.10.2",
    "pytest>=9.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Education",
]
[project.urls]
homepage  = "https://pypi.org/project/pylings/"
Repository = "https://github.com/CompEng0001/pylings"
tracker = "https://github.com/CompEng0001/pylings/issues"

[project.scripts]
pylings = "pylings.__main__:main"

[tool.setuptools]
packages = ["pylings"]
include-package-data = true

[tool.setuptools.package-data]
pylings = ["config/*.toml", "styles/*.tcss", "solutions/*/*", "backups/*/*", "exercises/*/*", "tests/*/*"]
